Fix Payment Feature - Web socket incomplete